<resources>
    <string name="app_privacy_policy_link" translatable="false">
        https://github.com/enzzoMs/HexEmoji/blob/main/PRIVACY_POLICY.md
    </string>
    <string name="app_name_complete" translatable="false">HexEmoji</string>
    <string name="app_name_first_part" translatable="false">Hex</string>
    <string name="app_name_last_part" translatable="false">Emoji</string>
    <string name="app_subtitle">Challenge your memory and have fun matching emojis!</string>
    <string name="app_logo_content_description">Application logo</string>
    <string name="button_continue">Continue</string>
    <string name="button_play">Play</string>
    <string name="icon_content_description_back">Go back to the previous page</string>
    <string name="icon_content_description_close">Close page</string>
    <string name="button_content_description_previous_page">Previous page</string>
    <string name="button_content_description_next_button">Next page</string>
    <string name="progress_ratio_template" translatable="false">%1$d / %2$d</string>
    <string name="app_action_fail_toast_msg">Error completing action. Please try again later.</string>
    <string name="app_connection_fail_toast_msg">Unable to connect to Google Play.</string>
    <string name="exit_game_message">Do you really want to leave? You will lose all your progress in this game!</string>
    <string name="exit_game_button_cancel">Cancel</string>
    <string name="exit_game_emoji" translatable="false">😥</string>
    <string name="game_ended_victory_emoji" translatable="false">🏆</string>
    <string name="game_ended_victory">Victory!</string>
    <string name="game_ended_defeat">Defeat</string>
    <string name="game_ended_defeat_emoji" translatable="false">😔</string>
    <string name="game_ended_replay">Replay</string>
    <string name="game_paused_description">Game paused</string>
    <string name="game_message_exit">Exit</string>
    <string name="challenges_progress">Challenge progress:</string>
    <string name="challenges_progress_template_pending">Pending: %1$s</string>
    <string name="challenges_progress_template_in_progress">In Progress: %1$s</string>
    <string name="challenges_progress_template_completed">Completed: %1$s</string>
    <string name="emoji_details_copy_button">Copy</string>
    <string name="emoji_details_copy_toast_msg">Emoji copied to clipboard</string>
    <string name="refresh_collection_title">Generate New Challenges?</string>
    <string name="refresh_collection_alert">WARNING: All challenges in this category will be replaced with new ones.</string>
    <string name="refresh_collection_button_confirm">Yes</string>
    <string name="refresh_collection_button_cancel">No</string>
    <string name="refresh_collection_error_msg">Error generating challenges. Please try again later.</string>
    <string name="challenge_completed">Challenge Completed!</string>
    <string name="challenge_completed_description_template">
        Congratulations! You\'ve unlocked the following emoji for the %1$s category:
    </string>
    <string name="challenge_completed_finish_button">Understood</string>
    <string name="board_tutorial_scaling">Pinch your fingers to zoom in and spread them apart to zoom out.</string>
    <string name="board_tutorial_panning">Swipe your finger in any direction to move the board.</string>
    <string name="no_available_game_tutorial_msg">Tutorial unavailable for this mode.</string>
    <string name="game_tutorial_zen_description_part_01">Zen Mode is a relaxing mode with no time limit or scoring.</string>
    <string name="game_tutorial_zen_description_part_02">Tap a card to reveal the hidden emoji.</string>
    <string name="game_tutorial_zen_description_part_03">Win by finding all pairs of emojis.</string>
    <string name="game_tutorial_against_clock__description_part_01">
        In Against the Clock you have a time limit to finish the game.
    </string>
    <string name="game_tutorial_against_clock_description_part_02">
        Find all pairs of cards before time runs out.
    </string>
    <string name="game_tutorial_limited_moves_description_part_01">
        In Limited Moves you have a limited number of moves to finish the game.
    </string>
    <string name="game_tutorial_limited_moves_description_part_02">
        Find all pairs of cards before you run out of moves.
    </string>
    <string name="game_tutorial_sequence_description_part_01">
        In Sequence mode your mission is to find pairs of emojis in sequence, without making any mistakes.
    </string>
    <string name="game_tutorial_sequence_description_part_02">
        If you make a mistake you\'ll have to start a new sequence from scratch.
    </string>
    <string name="game_tutorial_shuffled_description_part_01">
        In Shuffled mode you need to be quick to win.
    </string>
    <string name="game_tutorial_shuffled_description_part_02">
        Quando o tempo acabar, duas cartas aleatórias serão embaralhadas. Não perca tempo!
    </string>
    <string name="game_tutorial_chaos_description_part_01">
        Total Chaos Mode is the ultimate skill challenge!
    </string>
    <string name="game_tutorial_chaos_description_part_02">
        In this mode you have a time limit, move limit, and the board will be constantly shuffled.
    </string>
    <string name="app_showcase_title_play">Get ready for a memory challenge!</string>
    <string name="app_showcase_title_statistics">Track your progress</string>
    <string name="app_showcase_title_emojis">Explore different emojis</string>
    <string name="app_showcase_descriptions_play">
        In HexEmoji, you will have the opportunity to explore different game modes and test your memory.
    </string>
    <string name="app_showcase_descriptions_statistics">
        Check your statistics and see how you\'re progressing.
    </string>
    <string name="app_showcase_descriptions_emojis">
        Discover emojis as you play. The more you win, the more emojis you unlock!
        Collect them all and complete your collection."
    </string>
    <string name="emoji_name_identifier_prefix" translatable="false">emoji_name</string>
    <string name="entry_screen_button_instructions">Instructions</string>
    <string name="icon_title_game_info">Tutorial</string>
    <string name="icon_content_description_game_info">Game mode tutorial</string>
    <string name="icon_content_description_exit_game">Exit the game.</string>
    <string name="game_countdown_end_text">Go!</string>
    <string name="game_timer_template" translatable="false">%1$d : %2$02d</string>
    <string name="collection_unlocked_bar_description">Unlocked Emojis Progression</string>
    <string name="collection_search_field_hint">Search</string>
    <string name="collection_search_no_results">No results for search</string>
    <string name="collection_card_locked_content_description">Locked emoji</string>
    <string name="icon_content_description_exit_collection">Exit collection</string>
    <string name="page_title_page_play">Play</string>
    <string name="page_title_page_statistics">Statistics</string>
    <string name="page_title_page_emojis">Emojis</string>
    <string name="icon_title_info">Information</string>
    <string name="icon_title_purchase">Purchase</string>
    <string name="icon_content_description_info">View app information</string>
    <string name="icon_content_description_purchases">Purchase items</string>
    <string name="icon_content_description_page_play">Navigate to game modes page</string>
    <string name="icon_content_description_page_statistics">Navigate to statistics page</string>
    <string name="icon_content_description_page_emojis">Navigate to emojis page</string>
    <string name="app_info_menu_privacy_policy">Navigate to emojis page</string>
    <string name="app_purchase_menu_unlock_all_emojis">Unlock all emojis</string>
    <string name="weekly_victories_chart_title">Weekly Victories</string>
    <string name="daily_emoji_message">Tap to unlock your daily emoji!</string>
    <string name="daily_emoji_message_already_unlocked">Daily emoji unlocked. Come back tomorrow!</string>
    <string name="statistics_game_modes_tab_description">Statistics for each game mode.</string>
    <string name="statistics_game_modes_all">All</string>
    <string name="game_mode_statistic_total_games">Total Games</string>
    <string name="game_mode_statistic_victory_percentage">Victories</string>
    <string name="game_mode_statistic_pairs_found">Pairs Found</string>
    <string name="game_mode_statistic_favorite_board">Favorite Board</string>
    <string name="page_description_emojis">Explore your collection and unlock emojis through special challenges!</string>
    <string name="collection_details_tab_description">Different categories of emojis</string>
    <string name="challenges_none_available">No challenges available for the category</string>
    <string name="challenges_section_description">Challenges</string>
    <string name="challenges_refresh_description">Generate new challenges</string>
    <string name="challenge_progress_label">Progress:</string>
    <string name="page_description_board_selection">Choose the board size</string>
    <string name="page_description_category_selection">Choose which emojis you want to play with</string>
    <string name="all_emojis_checkbox">All Emojis</string>
    <string name="emoji_category_image_content_description">
         Image with examples of emojis that are part of this category.
    </string>
    <string name="page_description_game_modes">Explore different modes and challenges!</string>
    <string name="game_mode_card_emoji_lotus" translatable="false">🪷</string>
    <string name="game_mode_card_emoji_hourglass_done" translatable="false">⌛</string>
    <string name="game_mode_card_emoji_triangular_ruler" translatable="false">📐</string>
    <string name="game_mode_card_emoji_brain" translatable="false">🧠</string>
    <string name="game_mode_card_emoji_dice" translatable="false">🎲</string>
    <string name="game_mode_card_emoji_spiral_eyes" translatable="false">😵‍💫</string>
    <string name="challenge_template_general">Complete %1$d game(es) %2$s in "%3$s"%4$s%5$s</string>
    <string name="challenge_template_board_constraint">\u0020on a (%1$s) board size</string>
    <string name="challenge_template_category_constraint">\u0020using "%1$s" emojis</string>
    <string name="challenge_template_consecutive_games_constraint">consecutively\u0020</string>
    <string name="challenge_template_timed">Complete %1$d match(es) in "%2$s" in less than %3$d seconds.</string>
    <string name="challenge_template_limited_moves">Complete %1$d match(es) in "%2$s" in less than %3$d moves.</string>
    <string name="emoji_category_title_people_emotions">People and Emotions</string>
    <string name="emoji_category_title_nature">Nature and Animals</string>
    <string name="emoji_category_title_food">Food and Drinks</string>
    <string name="emoji_category_title_activities">Sports and Activities</string>
    <string name="emoji_category_title_places_travel">Travel and Places</string>
    <string name="emoji_category_title_objects">Objects</string>
    <string name="emoji_category_title_symbols">Symbols</string>
    <string name="emoji_category_title_flags">Flags</string>
    <string name="emoji_category_title_numbers_letters">Numbers and Letters</string>
    <string name="emoji_category_emoji_icon_people_emotions" translatable="false">😀</string>
    <string name="emoji_category_emoji_icon_nature" translatable="false">🐾</string>
    <string name="emoji_category_emoji_icon_food" translatable="false">🍔</string>
    <string name="emoji_category_emoji_icon_activities" translatable="false">🏈</string>
    <string name="emoji_category_description_people_emotions">
        People and different facial expressions, such as smiles, laughter, sadness, surprise,
        anger, among others.
    </string>
</resources>