<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/game_mode_fragment"
            android:icon="@drawable/ic_stadia_controller"
            android:title="@string/page_title_page_play"
            android:contentDescription="@string/icon_content_description_page_play" />

        <item
            android:id="@+id/statistics_fragment"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/page_title_page_statistics"
            android:contentDescription="@string/icon_content_description_page_statistics"/>

        <item
            android:id="@+id/emojis_fragment"
            android:icon="@drawable/ic_smiley_face_outlined"
            android:title="@string/page_title_page_emojis"
            android:contentDescription="@string/icon_content_description_page_emojis"/>
    </group>
</menu>