<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.HexEmoji.CardView"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginHorizontal="@dimen/card_outer_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/collection_details_title"
            android:textAppearance="@style/TextAppearance.HexEmoji.CardView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_inner_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/collection_details_icon"
            app:layout_constraintBottom_toBottomOf="@id/collection_details_icon"
            tools:text="@string/emoji_category_title_people_emotions"
            tools:textColor="@color/emoji_category_color_people_emotions" />

        <!-- Black text color to avoid transparency on emojis -->
        <TextView
            android:id="@+id/collection_details_icon"
            android:textColor="#000000"
            app:autoSizeTextType="uniform"
            android:layout_width="@dimen/collection_details_card_icon_size"
            android:layout_height="@dimen/collection_details_card_icon_size"
            android:layout_marginVertical="@dimen/card_title_vertical_margin"
            android:layout_marginHorizontal="@dimen/card_inner_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/emoji_category_emoji_icon_people_emotions"/>

        <TextView
            android:id="@+id/collection_details_description"
            android:textAppearance="@style/TextAppearance.HexEmoji.CardView.Description"
            android:hyphenationFrequency="full"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_inner_margin"
            android:layout_marginBottom="@dimen/card_inner_margin"
            android:layout_marginTop="@dimen/card_title_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collection_details_icon"
            tools:text="@string/emoji_category_description_people_emotions" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/collection_details_unlocked_bar"
            android:contentDescription="@string/collection_unlocked_bar_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_inner_margin"
            app:layout_constraintTop_toTopOf="@id/collection_details_unlocked_ratio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/collection_details_unlocked_ratio"
            app:layout_constraintBottom_toBottomOf="@id/collection_details_unlocked_ratio"
            tools:indicatorColor="@color/emoji_category_color_people_emotions"
            tools:progress="25"/>

        <TextView
            android:id="@+id/collection_details_unlocked_ratio"
            android:fontFamily="@font/lexend_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_inner_margin"
            android:layout_marginEnd="@dimen/card_inner_margin"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collection_details_description"
            tools:text="50 / 200"
            tools:textColor="@color/emoji_category_color_people_emotions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>