<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/dialog_card_corner_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/refresh_challenges_title"
            android:text="@string/refresh_collection_title"
            android:textAppearance="@style/TextAppearance.HexEmoji.Dialog"
            android:fontFamily="@font/lexend_bold"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_inner_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/refresh_challenges_title_divider"
            app:dividerThickness="@dimen/divider_thickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_inner_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refresh_challenges_title" />

        <TextView
            android:id="@+id/refresh_challenges_alert"
            android:text="@string/refresh_collection_alert"
            android:textAppearance="@style/TextAppearance.HexEmoji.Dialog"
            android:fontFamily="@font/lexend_medium"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_inner_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refresh_challenges_title_divider" />

        <View
            android:id="@+id/exit_game_buttons_background"
            android:background="?attr/colorSurfaceDim"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dialog_inner_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refresh_challenges_alert" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refresh_challenges_button_confirm"
            android:text="@string/refresh_collection_button_confirm"
            style="@style/Widget.HexEmoji.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_inner_margin"
            android:layout_marginVertical="@dimen/dialog_inner_margin"
            android:layout_marginEnd="@dimen/dialog_buttons_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/refresh_challenges_button_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/exit_game_buttons_background" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refresh_challenges_button_cancel"
            android:text="@string/refresh_collection_button_cancel"
            style="@style/Widget.HexEmoji.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_buttons_spacing"
            android:layout_marginVertical="@dimen/dialog_inner_margin"
            android:layout_marginEnd="@dimen/dialog_inner_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/refresh_challenges_button_confirm"
            app:layout_constraintTop_toTopOf="@+id/exit_game_buttons_background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>