<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.collection.EmojiCollection">

    <View
        android:id="@+id/collection_description_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/collection_description_bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_toolbar"
        tools:background="?attr/colorPrimary"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/collection_description_bottom_guideline"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/collection_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:constraint_referenced_ids="collection_search_field"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/collection_toolbar"
        app:navigationIcon="@drawable/ic_close"
        app:navigationContentDescription="@string/icon_content_description_exit_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="@string/emoji_category_title_people_emotions" />

    <TextView
        android:id="@+id/collection_description"
        android:textAppearance="@style/TextAppearance.HexEmoji.Collection.Description"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/collection_horizontal_margin"
        android:layout_marginTop="@dimen/collection_toolbar_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_toolbar"
        tools:text="@string/emoji_category_description_people_emotions" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/collection_search_field"
        app:startIconDrawable="@drawable/ic_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/collection_search_field_horizontal_margin"
        android:layout_marginTop="@dimen/collection_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_description">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/collection_search_field_hint"
            android:fontFamily="@font/lexend_medium"
            android:background="@drawable/text_field_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/collection_background"
        android:background="?attr/colorSurface"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/collection_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_description_background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collection_emoji_list"
        android:overScrollMode="never"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/collection_background"
        app:layout_constraintStart_toStartOf="@id/collection_background"
        app:layout_constraintEnd_toEndOf="@id/collection_background"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

</androidx.constraintlayout.widget.ConstraintLayout>
