<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="@dimen/dialog_card_corner_radius"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/game_tutorial_image"
                android:importantForAccessibility="no"
                tools:srcCompat="@drawable/game_tutorial_board_example"
                android:scaleType="fitCenter"
                android:layout_width="0dp"
                android:layout_height="@dimen/game_tutorial_image_height"
                android:layout_marginTop="@dimen/dialog_inner_margin"
                android:layout_marginHorizontal="@dimen/game_tutorial_image_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/game_tutorial_description_background"
                android:background="?attr/colorSurfaceDim"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/game_tutorial_image_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_tutorial_image" />

            <TextView
                android:id="@+id/game_tutorial_description"
                tools:text="@string/game_tutorial_zen_description_part_01"
                android:textAppearance="@style/TextAppearance.HexEmoji.Dialog"
                android:hyphenationFrequency="full"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dialog_inner_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/game_tutorial_description_background"
                app:layout_constraintVertical_bias="0.0"/>

            <ImageButton
                android:id="@+id/game_tutorial_button_previous"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/button_content_description_previous_page"
                style="@style/Widget.HexEmoji.IconButton"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dialog_inner_margin"
                app:layout_constraintBottom_toBottomOf="@id/game_tutorial_description_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_tutorial_description"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/game_tutorial_button_next"
                android:src="@drawable/ic_arrow_next"
                android:contentDescription="@string/button_content_description_next_button"
                style="@style/Widget.HexEmoji.IconButton"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dialog_inner_margin"
                app:layout_constraintBottom_toBottomOf="@id/game_tutorial_description_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_tutorial_description"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/game_tutorial_page_indicator_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game_tutorial_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</merge>